// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitFormService createUnit$ should create unit 1`] = `
Object {
  "data": Object {
    "adBanners": null,
    "adBannersEnabled": null,
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": null,
      "postalCode": "1021",
      "title": "HQ",
    },
    "canCallWaiter": null,
    "canRequestVatInvoice": null,
    "categoryOrders": null,
    "chainId": null,
    "coverBanners": null,
    "coverBannersEnabled": null,
    "createdAt": Any<String>,
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": null,
    "floorMap": null,
    "groupId": null,
    "id": "test_ADMIN_UNIT_IT_UNIT_ID_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "isVisibleInApp": null,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "location": Object {
      "lat": 47,
      "lon": 19,
    },
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPaymentPolicy": "prepay",
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": null,
    "ratingPolicies": null,
    "serviceFeePolicy": null,
    "soldOutVisibilityPolicy": null,
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": null,
    "updatedAt": Any<String>,
  },
  "type": "insert",
}
`;

exports[`UnitFormService createUnitFormGroup should create new form group 1`] = `
Object {
  "address": Object {
    "address": "",
    "city": "",
    "country": "",
    "postalCode": "",
    "title": "",
  },
  "canCallWaiter": false,
  "canRequestVatInvoice": true,
  "chainId": "",
  "currency": "",
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "email": "",
  "externalId": "",
  "groupId": "",
  "isActive": "",
  "isVisibleInApp": true,
  "lanes": Array [],
  "location": Object {
    "lat": 0,
    "lon": 0,
  },
  "merchantId": "",
  "name": "",
  "open": Object {
    "from": "",
    "to": "",
  },
  "openingHours": Object {
    "custom": Array [],
    "fri": Object {
      "from": "",
      "to": "",
    },
    "mon": Object {
      "from": "",
      "to": "",
    },
    "sat": Object {
      "from": "",
      "to": "",
    },
    "sun": Object {
      "from": "",
      "to": "",
    },
    "thu": Object {
      "from": "",
      "to": "",
    },
    "tue": Object {
      "from": "",
      "to": "",
    },
    "wed": Object {
      "from": "",
      "to": "",
    },
  },
  "orderPaymentPolicy": "prepay",
  "orderPolicy": "full",
  "packagingTaxPercentage": "",
  "paymentModes": Array [],
  "phone": "",
  "pos": Object {
    "type": "anyupp",
  },
  "ratingPolicies": Array [],
  "soldOutVisibilityPolicy": "faded",
  "style": Object {
    "colors": Object {
      "button": "#30bf60",
      "buttonText": "#ffffff",
      "highlight": "#30bf60",
      "icon": "#30bf60",
    },
    "images": Object {
      "header": "",
      "logo": "",
    },
  },
  "supportedOrderModes": Array [
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
  ],
  "timeZone": "",
  "tipPolicy": Object {
    "description": Object {
      "de": "",
      "en": "",
      "hu": "",
    },
    "minOtherAmount": null,
    "percents": Array [],
    "title": Object {
      "de": "",
      "en": "",
      "hu": "",
    },
  },
}
`;

exports[`UnitFormService createUnitFormGroup should create update form group 1`] = `
Object {
  "address": Object {
    "address": "",
    "city": "",
    "country": "",
    "postalCode": "",
    "title": "",
  },
  "canCallWaiter": false,
  "canRequestVatInvoice": true,
  "chainId": "",
  "currency": "",
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "email": "",
  "externalId": "",
  "groupId": "",
  "isActive": "",
  "isVisibleInApp": true,
  "lanes": Array [],
  "location": Object {
    "lat": 0,
    "lon": 0,
  },
  "merchantId": "",
  "name": "",
  "open": Object {
    "from": "",
    "to": "",
  },
  "openingHours": Object {
    "custom": Array [],
    "fri": Object {
      "from": "",
      "to": "",
    },
    "mon": Object {
      "from": "",
      "to": "",
    },
    "sat": Object {
      "from": "",
      "to": "",
    },
    "sun": Object {
      "from": "",
      "to": "",
    },
    "thu": Object {
      "from": "",
      "to": "",
    },
    "tue": Object {
      "from": "",
      "to": "",
    },
    "wed": Object {
      "from": "",
      "to": "",
    },
  },
  "orderPaymentPolicy": "prepay",
  "orderPolicy": "full",
  "packagingTaxPercentage": "",
  "paymentModes": Array [],
  "phone": "",
  "pos": Object {
    "type": "anyupp",
  },
  "ratingPolicies": Array [],
  "soldOutVisibilityPolicy": "faded",
  "style": Object {
    "colors": Object {
      "button": "#30bf60",
      "buttonText": "#ffffff",
      "highlight": "#30bf60",
      "icon": "#30bf60",
    },
    "images": Object {
      "header": "",
      "logo": "",
    },
  },
  "supportedOrderModes": Array [
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
  ],
  "timeZone": "",
  "tipPolicy": Object {
    "description": Object {
      "de": "",
      "en": "",
      "hu": "",
    },
    "minOtherAmount": null,
    "percents": Array [],
    "title": Object {
      "de": "",
      "en": "",
      "hu": "",
    },
  },
}
`;

exports[`UnitFormService updateRKeeperData$ should update the RKeepeR AnyUPP password 1`] = `
Object {
  "data": Object {
    "adBanners": null,
    "adBannersEnabled": null,
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": null,
      "postalCode": "1021",
      "title": "HQ",
    },
    "canCallWaiter": null,
    "canRequestVatInvoice": null,
    "categoryOrders": null,
    "chainId": null,
    "coverBanners": null,
    "coverBannersEnabled": null,
    "createdAt": Any<String>,
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": "restaurantid",
    "floorMap": null,
    "groupId": null,
    "id": "test_ADMIN_UNIT_IT_UNIT_ID_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "isVisibleInApp": null,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "location": Object {
      "lat": 47,
      "lon": 19,
    },
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPaymentPolicy": "prepay",
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": Object {
      "rkeeper": Object {
        "anyuppPassword": Any<String>,
        "anyuppUsername": "ANYUPP_USERNAME",
        "endpointUri": "https://testendpoint.ucs.hu/wp-json/vendor/v1",
        "rkeeperPassword": "f3e7c8260b2f9b1cc62208a441410a",
        "rkeeperUsername": "590_49_985_540",
      },
      "type": "rkeeper",
    },
    "ratingPolicies": Array [
      Object {
        "description": Object {
          "de": null,
          "en": "Desc",
          "hu": null,
        },
        "key": "question1",
        "ratings": Array [
          Object {
            "icon": null,
            "text": Object {
              "de": null,
              "en": "good",
              "hu": null,
            },
            "value": 1,
          },
        ],
        "title": Object {
          "de": null,
          "en": "Question",
          "hu": null,
        },
      },
    ],
    "serviceFeePolicy": Object {
      "percentage": 10,
      "type": "applicable",
    },
    "soldOutVisibilityPolicy": null,
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": Object {
      "description": null,
      "minOtherAmount": null,
      "percents": Array [
        2,
      ],
      "title": null,
    },
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;

exports[`UnitFormService updateRKeeperData$ should update the RKeepeR POS content 1`] = `
Object {
  "data": Object {
    "adBanners": null,
    "adBannersEnabled": null,
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": null,
      "postalCode": "1021",
      "title": "HQ",
    },
    "canCallWaiter": null,
    "canRequestVatInvoice": null,
    "categoryOrders": null,
    "chainId": null,
    "coverBanners": null,
    "coverBannersEnabled": null,
    "createdAt": Any<String>,
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": "restaurantid",
    "floorMap": null,
    "groupId": null,
    "id": "test_ADMIN_UNIT_IT_UNIT_ID_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "isVisibleInApp": null,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "location": Object {
      "lat": 47,
      "lon": 19,
    },
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPaymentPolicy": "prepay",
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": Object {
      "rkeeper": Object {
        "anyuppPassword": Any<String>,
        "anyuppUsername": "test-anyuppUsername",
        "endpointUri": "test-endpointUri",
        "rkeeperPassword": "test-rkeeperPassword",
        "rkeeperUsername": "test-rkeeperUsername",
      },
      "type": "rkeeper",
    },
    "ratingPolicies": Array [
      Object {
        "description": Object {
          "de": null,
          "en": "Desc",
          "hu": null,
        },
        "key": "question1",
        "ratings": Array [
          Object {
            "icon": null,
            "text": Object {
              "de": null,
              "en": "good",
              "hu": null,
            },
            "value": 1,
          },
        ],
        "title": Object {
          "de": null,
          "en": "Question",
          "hu": null,
        },
      },
    ],
    "serviceFeePolicy": Object {
      "percentage": 10,
      "type": "applicable",
    },
    "soldOutVisibilityPolicy": null,
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": Object {
      "description": null,
      "minOtherAmount": null,
      "percents": Array [
        2,
      ],
      "title": null,
    },
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;

exports[`UnitFormService updateUnit$ should update unit 1`] = `
Object {
  "data": Object {
    "adBanners": null,
    "adBannersEnabled": null,
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": null,
      "postalCode": "1021",
      "title": "HQ",
    },
    "canCallWaiter": null,
    "canRequestVatInvoice": null,
    "categoryOrders": null,
    "chainId": null,
    "coverBanners": null,
    "coverBannersEnabled": null,
    "createdAt": Any<String>,
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": null,
    "floorMap": null,
    "groupId": null,
    "id": "test_ADMIN_UNIT_IT_UNIT_ID_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "isVisibleInApp": null,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "location": Object {
      "lat": 47,
      "lon": 19,
    },
    "merchantId": null,
    "name": "[object Object] MOD",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPaymentPolicy": "prepay",
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": null,
    "ratingPolicies": null,
    "serviceFeePolicy": null,
    "soldOutVisibilityPolicy": null,
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "supportedOrderModes": Array [
      "pickup",
    ],
    "supportedServingModes": Array [
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": null,
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;
